--- a/chinese.css
+++ b/chinese.css
@@ -1,1 +1,272 @@
+hr{
+	border-top: 1px solid white;
+}
+body {
+  font-size: 16px;
+  color: #fff;
+  background-color: #61122f;
+  font-family: 'Oxygen', sans-serif ;
+}
+/* HEADER */
+#header-nav {
+	background-color: #f6b319;
+	border: 0 ; 
+}
+#logo-img{
+	background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture32/after/images/restaurant-logo_large.png') no-repeat;
+	width: 150px ;
+	height: 150px ;
+	margin: 10px 15px 10px 0;
+}
+.navbar-brand {
+	padding-top: 25px;
+	margin: 0 ;
+	padding-bottom: 0 ; 
+}
+.navbar-brand h1 { /*Restaurent name */
+	font-family: 'Lora', serif;
+	color: #557c3e;
+	font-size: 1.5em ;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-shadow: 1px 1px 1px #222;
+	line-height: .75; /* Line-height is the vertical distance between lines of text. */
+	margin-bottom: 0;
+}
+.navbar-brand a:hover, .navbar-brand a:focus { 
+  /*Hover is 'true' when the mouse pointer is over an element. Focus is true if the cursor is in that element*/
+  	text-decoration: none; /* ynahi l star eli taht l lien*/
+}
+.navbar-brand p { /* Kosher certification */
+margin-top: 15px ; 
+color: #000;
+text-transform: uppercase;
+font-size: .7em;
+}
+.navbar-brand p span { /* Star-K */
+  vertical-align: middle; /*we want those words kosher certified to align in the center of that star image */
+}
+#nav-list {
+  margin-top: 10px;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: #951C49;
+    text-align: center;
+}
+.navbar-dark .navbar-nav .nav-link a:hover {
+  background: #E7E7E7;
+}
+#phone {
+  margin-top: 5px;
+}
+#phone a { /* Phone number */
+  text-align: right;
+  padding-bottom: 0;
+  color: #951C49;
+}
+#phone div { /* We Deliver */
+  color: #557c3e;
+  text-align: right;
+  padding-right: 15px;
+}
 
+.container button.navbar-toggler  {
+  border: 1px solid #61122f;
+}
+.container .navbar-toggler-icon{
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(150, 40, 27, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.container button.navbar-toggler {
+  clear: both;
+}
+/* END HEADER */
+
+/* HOME PAGE */
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+#menu-tile {
+  background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture35/after/images/menu-tile.jpg') no-repeat;
+  background-position: center;
+}
+#specials-tile {
+  background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture35/after/images/specials-tile.jpg') no-repeat;
+  background-position: center;
+}
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;/* black */
+  color: #fff; /*white */
+  opacity: .8; /* khaletna nraw men taht chfama */
+}
+
+/* END HOME PAGE */
+/* FOOTER */
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+/* END FOOTER */
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+.container .jumbotron {
+background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture32/after/images/jumbotron_1200.jpg') no-repeat;
+height: 675px ;
+box-shadow: 0 0 50px #3F0C1F ;
+border: 2px solid #3F0C1F ;
+ }
+}
+
+/********** medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* Header */
+  #logo-img {
+    background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture32/after/images/restaurant-logo_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+  /* End Header */
+  /* Home Page */
+  .container .jumbotron {
+    background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture34/after/images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+    box-shadow: 0 0 50px #3F0C1F ;
+    border: 2px solid #3F0C1F ;
+    margin-top: 10px ;
+  }
+  /* End Home Page */
+}
+
+/********** small devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+#logo-img {
+    background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture32/after/images/restaurant-logo_small.png') no-repeat;
+    width: 50px;
+    height: 50px;
+    margin: 1px 1px 1px 0;
+  }
+.navbar-brand h1 {
+    font-size: 20px;
+	}
+.navbar-header > a {
+      padding-top: 25px ;
+      padding-right: 8px ;
+      vertical-align: center ;
+	}
+.container .jumbotron {
+background: url('https://raw.githubusercontent.com/jhu-ep-coursera/fullstack-course4/master/examples/Lecture34/after/images/jumbotron_768.jpg') no-repeat;
+height: 432px ;
+box-shadow: 0 0 50px #3F0C1F ;
+border: 2px solid #3F0C1F ;
+		}	
+}
+
+/********** extra-small devices only **********/
+@media (max-width: 767px) {
+  /* Header */
+.navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+.navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+.navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+.navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
+#navbarMenu a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+#navbarMenu a span { /* Collapsed nav menu glyph */
+    font-size: 1em;
+    margin-right: 5px;
+  }
+#call-btn {
+ margin-top: 15px ;
+}  
+#call-btn > a {
+    font-size: 1.5em;
+    display: block ;
+    margin: 0 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color: #951c49;
+ }
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: .7em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
+  /* End Header */
+
+  /* Home Page */
+  .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+  }
+}
+@media (max-width: 575px) {
+#menu-tile, #specials-tile {
+    width: 360px;
+    margin: 0 auto 15px;
+  }
+/* Footer */
+  .panel-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .panel-footer section hr {
+    width: 50%;
+  }
+  /* End Footer */
+}
