--- a/chinese.css
+++ b/chinese.css
@@ -145,6 +145,65 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 }
 /* END FOOTER */
 
+/* Menu Categories page */
+
+/* !!!!!!!!! idk why ma habouch yekhdmou donc ahwka hatithom fel html w hedhom kaadou ma najamtech nhothom !!!!!!!!! */
+div#category-title:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+#menu-categories-title + div { /* + maaneha next sibling ; donc l hne hachtna b menu-categories-title w div next sibling mteeha */ 
+  margin-bottom: 50px;
+}
+
+/* End Menu Categories page */
+
+/* Single Category page */
+.menu-item-tile {
+	margin-bottom: 25px ;
+}
+.menu-item-tile hr {
+	width: 80% ;
+}
+.menu-item-price {
+	font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
+}
+div.menu-item-tile div.menu-item-price span {
+  font-size: .6em;
+}
+.menu-item-photo {
+  position: relative;
+  border: 2px solid #3F0C1F; 
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+.menu-item-photo div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+.menu-item-description {
+  padding-right: 30px;
+}
+h3.menu-item-title {
+  margin: 0 0 10px;
+}
+.menu-item-details {
+  font-size: .9em;
+  font-style: italic;
+} 
+
+/* End Single Category page */ 
+
 /********** Large devices only **********/
 @media (min-width: 1200px) {
 .container .jumbotron {
@@ -269,4 +328,13 @@ border: 2px solid #3F0C1F ;
     width: 50%;
   }
   /* End Footer */
+  .menu-item-photo{
+  	margin-right: auto;
+  }
+  .menu-item-tile .menu-item-price {
+    text-align: center;
+  }
+  .menu-item-description {
+    text-align: center;
+  }
 }
